# platanus-hack-25-team-26

./: ANALYSIS_REPORT.md  IMPROVEMENTS_ACTION_PLAN.md  QUICK_SUMMARY.md  README.md  platanus-hack-project.json  project-description.md
.claude/: settings.local.json
api/: .gitignore  Dockerfile  email_service.py  email_template.html  graph.py  main.py  prompts.py  pyproject.toml
landing/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
landing/src/: App.tsx  FallingText.tsx  GradientText.tsx  RotatingText.tsx  TextType.tsx  index.css
landing/src/components/: FallingText.css
mac-frontend/: .env.example  .gitignore  BUILD.md  BUILD_SUCCESS.md  QUICK_BUILD_GUIDE.md  README.md  SECURITY_CHECKLIST.md  SETUP.md  electron-builder.json  entitlements.mac.inherit.plist  entitlements.mac.plist  instructions.md  package-lock.json  package.json  start-app.sh  start-backend.sh  test-backend.js  test-similarity.js
mac-frontend/scripts/: notarize.js
mac-frontend/src/: main.js  preload.js
mac-frontend/src/main/: backend.js  capture.js  imageSimilarity.js  ipc.js  main.js  phishingLogic.js
mac-frontend/src/preload/: overlayPreload.js
mac-frontend/src/renderer/: index.html  renderer.js  styles.css
mac-frontend/src/renderer/overlay/: index.html  (+2 more)
windows-frontend/: .gitignore  AlwaysOnTopBlockingDialog.cs  ApiLogger.cs  AppSettings.cs  DialogForm.cs  MainForm.cs  PhishingApiClient.cs  PhishingFinder-v2.csproj  PhishingResponse.cs  Program.cs  README.md  ScreenshotCapture.cs  SetupForm.cs  UserConfig.cs  WindowDetector.cs  appsettings.json
