[project]
name = "python-screenshot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.2.7",
    "fastapi[standard]>=0.121.3",
    "langchain[anthropic]>=1.0.8",
    "langgraph>=1.0.3",
    "requests>=2.32.0",
    "aioboto3>=15.5.0",
    "Pillow>=12.0.0",
    "cachetools>=6.2.2",
    "resend>=2.19.0",
]

[tool.setuptools]
py-modules = ["main", "graph", "prompts", "email_service"]
